# MDS7202-1

./: .gitignore  README.md  pyproject.toml  requirements.txt
labs/lab1/: lab1.ipynb
labs/lab10/: Lab10.ipynb  README.md  main.py  pyproject.toml  requirements.txt  super_model.joblib
labs/lab10/api/: config.py
labs/lab10/api/crud/: potability.py
labs/lab10/api/dependencies/: config.py  database.py  model.py
labs/lab10/api/exceptions/: pydantic.py
labs/lab10/api/routers/: diaria.py  potabilidad.py
labs/lab10/api/schemas/: potability.py
labs/lab10/tests/: conftest.py  utils.py
labs/lab10/tests/potabilidad/: test_delete_predictions.py  test_get_predictions.py  test_make_potability_prediction.py  test_update_predictions.py
labs/lab3/: Laboratorio3_enunciado.ipynb
labs/lab4/: Laboratorio4_enunciado.ipynb
labs/lab5/: Laboratorio5_Enunciado.ipynb
labs/lab6/: Laboratorio6_Enunciado.ipynb  pyproject.toml
labs/lab7/: Laboratorio7_enunciado.ipynb  pyproject.toml
labs/lab8/: Laboratorio8_Enunciado.ipynb
labs/lab9/: bench_reddit_cache.py  lab9.ipynb  pyproject.toml
