[tool.poetry]
name = "mds7202-1"
version = "0.1.0"
description = "Repositorio de tareas del curso MDS7202-1 Universidad de Chile"
authors = ["Keviinplz <kevin.pinochet@ug.uchile.cl>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "^1.21.2"
pandas = "^1.3.3"
jupyter = "^1.0.0"
plotly = "^5.3.1"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
