[tool.poetry]
name = "lab10"
version = "0.1.0"
description = ""
authors = ["Keviinplz <kevin.pinochet@ug.uchile.cl>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
numpy = "<1.21.1"
sklearn = "^0.0"
jupyter = "^1.0.0"
notebook = "^6.4.6"
pandas = "^1.3.5"
pytest = "^6.2.5"
httpx = "^0.21.1"
pytest-asyncio = "^0.16.0"
black = "^21.12b0"
tinydb = "^4.5.2"
uvicorn = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
