[tool.poetry]
name = "lab8"
version = "0.1.0"
description = ""
authors = ["Keviinplz <kevin.pinochet@ug.uchile.cl>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
jupyter = "^1.0.0"
notebook = "^6.4.6"
numpy = "^1.21.4"
pandas = "^1.3.4"
sklearn = "^0.0"
nltk = "^3.6.5"
llvmlite = "0.37.0"
plotly = "^5.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
